...
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="206dp"
        android:background="@drawable/triangle_shape" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_btn"
        android:layout_alignStart="@+id/sign_in_btn"
        android:layout_marginStart="82dp"
        android:layout_marginBottom="56dp"
...
