...
                android:paddingEnd="8dp"
                android:orientation="vertical">

                <!-- Right Button (Profile) -->

                <ImageButton
                    android:id="@+id/profile_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:background="#BD2AC0"
                    android:contentDescription="CLick to view profile"
                    android:paddingEnd="10dp"
...
